<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MediaRecorderActivity"
    android:orientation="vertical">

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        android:layout_marginStart="41dp"
        android:textOn="@string/redOption1_stop"
        android:textOff="@string/redOption1_record"
        android:textColor="@color/foreground"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        android:padding="20dp"
        android:background="@color/buttonColor"
        android:layout_marginBottom="41dp"
        android:layout_above="@+id/Button2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Button2"
        android:background="@color/buttonColor"
        android:text="@string/redOption1_play"
        android:textColor="@color/foreground"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        android:padding="20dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="131dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>