<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="b.boldandbrash.RateActivity">

    <TextView
        android:id="@+id/rateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/foreground"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:text="@string/rateTitle"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rateNumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/foreground"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:text="@string/rateNumLabel"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="64dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rateNum"
        android:layout_width="wrap_content"
        android:textColor="@color/foreground"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/rateNumLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/rateCommLabel" />

    <TextView
        android:id="@+id/rateCommLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/foreground"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:text="@string/rateCommLabel"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/rateNum"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/rateComm"
        android:layout_width="214dp"
        android:layout_height="0dp"
        android:ems="10"
        android:textColor="@color/foreground"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:inputType="textMultiLine"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/rateSubmit"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/rateCommLabel"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/rateSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/neutralButtonColor"
        android:padding="20sp"
        android:text="Button"
        android:textColor="@color/foreground"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:text="@string/rateSubmit" />

</android.support.constraint.ConstraintLayout>
